--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
-    "node-sass": "^4.10.0",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.5.2",
+    "node-sass": "^4.14.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +27,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "firebase-tools": "^6.1.1"
+    "firebase-tools": "^8.12.1"
   }
 }
